--- a/yoga-sutras/css/component.css
+++ b/yoga-sutras/css/component.css
@@ -1,281 +1,195 @@
-.rb-grid {
+.og-grid {
 	list-style: none;
-	text-align: center;
+	padding: 20px 0;
 	margin: 0 auto;
-}
-
-.rb-grid li {
-	width: 24%;
-	height: 15em;
-	margin: 0.5%;
-	background: #8CC7DF;
-	color: #fff;
-	display: block;
-	float: left;
-	padding: 1.6em;
-	cursor: pointer;
-	position: relative;
-}
-
-.rb-grid li.rb-span-2 {
-	width: 49%;
-}
-
-.rb-grid li.rb-span-4 {
-	width: 99%;
-}
-
-.rb-grid li h3 {
-	font-size: 2.6em;
-	font-weight: 100;
-}
-
-.rb-grid li[class^="icon-"]:before,
-.rb-grid li[class*=" icon-"]:before {
-	font-size: 10em;
-	position: absolute;
-	display: block;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	line-height: 3;
-	opacity: 0.4;
-	text-align: right;
-	pointer-events: none;
-}
-
-.rb-temp {
-	display: block;
-	font-size: 2em;
-	opacity: 0.5;
-	-webkit-transition: opacity 0.3s ease-in-out;
-	-moz-transition: opacity 0.3s ease-in-out;
-	transition: opacity 0.3s ease-in-out;
-}
-
-.rb-grid li:hover .rb-temp {
-	opacity: 1;
-}
-
-.rb-overlay {
-	opacity: 0;
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	-webkit-transition: all 0.4s ease;
-	-moz-transition: all 0.4s ease;
-	transition: all 0.4s ease;
-	z-index: -1;
-	pointer-events: none;
-	cursor: default;
-}
-
-.rb-close {
-	position: absolute;
-	top: 0.4em;
-	right: 0.4em;
-	width: 2em;
-	height: 2em;
-	text-indent: -9000px;
-	cursor: pointer;
-	z-index: 1000;
-}
-
-.rb-close::before {
-	content: 'x';
-	font-weight: 100;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	font-size: 3em;
-	line-height: 0.6;
 	text-align: center;
-	text-indent: 0px;
-}
-
-.rb-week {
 	width: 100%;
-	height: 100%;
 }
 
-.rb-week > div {
-	width: 10%;
-	height: 100%;
-	float: left;
-	position: relative;
-	padding: 3% 0;
+.og-grid li {
+	display: inline-block;
+	margin: 10px 5px 0 5px;
+	vertical-align: top;
+	height: 250px;
 }
 
-.rb-week > div:first-child {
-	width: 30%;
-}
-
-.rb-week span {
-	padding: 5% 0;
-	font-size: 2em;
-	font-weight: 100;
+.og-grid li > a,
+.og-grid li > a img {
+	border: none;
+	outline: none;
 	display: block;
-	margin: auto 0;
-	height: 30%;
+	position: relative;
+}
+
+.og-grid li.og-expanded > a::after {
+	top: auto;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+	border-bottom-color: #ddd;
+	border-width: 15px;
+	left: 50%;
+	margin: -20px 0 0 -15px;
+}
+
+.og-expander {
+	position: absolute;
+	background: #ddd;
+	top: auto;
+	left: 0;
 	width: 100%;
-	line-height: 0.8;
+	margin-top: 10px;
+	text-align: left;
+	height: 0;
+	overflow: hidden;
 }
 
-.rb-week span.rb-city {
+.og-expander-inner {
+	padding: 50px 30px;
+	height: 100%;
+}
+
+.og-close {
+	position: absolute;
+	width: 40px;
+	height: 40px;
+	top: 20px;
+	right: 20px;
+	cursor: pointer;
+}
+
+.og-close::before,
+.og-close::after {
+	content: '';
+	position: absolute;
+	width: 100%;
+	top: 50%;
+	height: 1px;
+	background: #888;
+	-webkit-transform: rotate(45deg);
+	-moz-transform: rotate(45deg);
+	transform: rotate(45deg);
+}
+
+.og-close::after {
+	-webkit-transform: rotate(-45deg);
+	-moz-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+}
+
+.og-close:hover::before,
+.og-close:hover::after {
+	background: #333;
+}
+
+.og-fullimg,
+.og-details {
+	width: 50%;
+	float: left;
+	height: 100%;
+	overflow: hidden;
+	position: relative;
+}
+
+.og-details {
+	padding: 0 40px 0 20px;
+}
+
+.og-fullimg {
+	text-align: center;
+}
+
+.og-fullimg img {
+	display: inline-block;
+	max-height: 100%;
+	max-width: 100%;
+}
+
+.og-details h3 {
+	font-weight: 300;
+	font-size: 52px;
+	padding: 40px 0 10px;
+	margin-bottom: 10px;
+}
+
+.og-details p {
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 22px;
+	color: #999;
+}
+
+.og-details a {
 	font-weight: 700;
-	padding: 1% 10%;
-	font-size: 1em;
-	line-height: 1.2;
+	font-size: 16px;
+	color: #333;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	padding: 10px 20px;
+	border: 3px solid #333;
+	display: inline-block;
+	margin: 30px 0 0;
+	outline: none;
 }
 
-.rb-week [class^="icon-"]:before {
-	font-size: 2.5em;
-	font-weight: normal;
+.og-details a::before {
+	content: '\2192';
+	display: inline-block;
+	margin-right: 10px;
 }
 
-.rb-week > div:first-child [class^="icon-"] {
-	opacity: 0.1;
+.og-details a:hover {
+	border-color: #999;
+	color: #999;
 }
 
-/* Colors */
+.og-loading {
+	width: 20px;
+	height: 20px;
+	border-radius: 50%;
+	background: #ddd;
+	box-shadow: 0 0 1px #ccc, 15px 30px 1px #ccc, -15px 30px 1px #ccc;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin: -25px 0 0 -25px;
+	-webkit-animation: loader 0.5s infinite ease-in-out both;
+	-moz-animation: loader 0.5s infinite ease-in-out both;
+	animation: loader 0.5s infinite ease-in-out both;
+}
 
-/* Grid */
-.rb-grid li:nth-child(1) { background: #3399CC; }
-.rb-grid li:nth-child(2) { background: #33CCCC; }
-.rb-grid li:nth-child(3) { background: #996699; }
-.rb-grid li:nth-child(4) { background: #C24747; }
-.rb-grid li:nth-child(5) { background: #e2674a; }
-.rb-grid li:nth-child(6) { background: #FFCC66; }
-.rb-grid li:nth-child(7) { background: #99CC99; }
-.rb-grid li:nth-child(8) { background: #669999; }
-.rb-grid li:nth-child(9) { background: #CC6699; }
-.rb-grid li:nth-child(10) { background: #339966; }
-.rb-grid li:nth-child(11) { background: #666699; }
+@-webkit-keyframes loader {
+	0% { background: #ddd; }
+	33% { background: #ccc; box-shadow: 0 0 1px #ccc, 15px 30px 1px #ccc, -15px 30px 1px #ddd; }
+	66% { background: #ccc; box-shadow: 0 0 1px #ccc, 15px 30px 1px #ddd, -15px 30px 1px #ccc; }
+}
 
-/* Overlay Columns */
-.rb-grid li:nth-child(1) .rb-week > div:nth-child(1) { background: #3399CC; }
-.rb-grid li:nth-child(1) .rb-week > div:nth-child(2) { background: #2D87B4; }
-.rb-grid li:nth-child(1) .rb-week > div:nth-child(3) { background: #297AA3; }
-.rb-grid li:nth-child(1) .rb-week > div:nth-child(4) { background: #256E93; }
-.rb-grid li:nth-child(1) .rb-week > div:nth-child(5) { background: #216283; }
-.rb-grid li:nth-child(1) .rb-week > div:nth-child(6) { background: #1D5672; }
-.rb-grid li:nth-child(1) .rb-week > div:nth-child(7) { background: #184962; }
-.rb-grid li:nth-child(1) .rb-week > div:nth-child(8) { background: #143D52; }
+@-moz-keyframes loader {
+	0% { background: #ddd; }
+	33% { background: #ccc; box-shadow: 0 0 1px #ccc, 15px 30px 1px #ccc, -15px 30px 1px #ddd; }
+	66% { background: #ccc; box-shadow: 0 0 1px #ccc, 15px 30px 1px #ddd, -15px 30px 1px #ccc; }
+}
 
-.rb-grid li:nth-child(2) .rb-week > div:nth-child(1) { background: #33CCCC; }
-.rb-grid li:nth-child(2) .rb-week > div:nth-child(2) { background: #2DB4B4; }
-.rb-grid li:nth-child(2) .rb-week > div:nth-child(3) { background: #29A3A3; }
-.rb-grid li:nth-child(2) .rb-week > div:nth-child(4) { background: #259393; }
-.rb-grid li:nth-child(2) .rb-week > div:nth-child(5) { background: #218383; }
-.rb-grid li:nth-child(2) .rb-week > div:nth-child(6) { background: #1D7272; }
-.rb-grid li:nth-child(2) .rb-week > div:nth-child(7) { background: #186262; }
-.rb-grid li:nth-child(2) .rb-week > div:nth-child(8) { background: #145252; }
+@keyframes loader {
+	0% { background: #ddd; }
+	33% { background: #ccc; box-shadow: 0 0 1px #ccc, 15px 30px 1px #ccc, -15px 30px 1px #ddd; }
+	66% { background: #ccc; box-shadow: 0 0 1px #ccc, 15px 30px 1px #ddd, -15px 30px 1px #ccc; }
+}
 
-.rb-grid li:nth-child(3) .rb-week > div:nth-child(1) { background: #996699; }
-.rb-grid li:nth-child(3) .rb-week > div:nth-child(2) { background: #936293; }
-.rb-grid li:nth-child(3) .rb-week > div:nth-child(3) { background: #875A87; }
-.rb-grid li:nth-child(3) .rb-week > div:nth-child(4) { background: #7A527A; }
-.rb-grid li:nth-child(3) .rb-week > div:nth-child(5) { background: #6E496E; }
-.rb-grid li:nth-child(3) .rb-week > div:nth-child(6) { background: #624162; }
-.rb-grid li:nth-child(3) .rb-week > div:nth-child(7) { background: #563956; }
-.rb-grid li:nth-child(3) .rb-week > div:nth-child(8) { background: #493149; }
+@media screen and (max-width: 830px) {
 
-.rb-grid li:nth-child(4) .rb-week > div:nth-child(1) { background: #C24747; }
-.rb-grid li:nth-child(4) .rb-week > div:nth-child(2) { background: #B83D3D; }
-.rb-grid li:nth-child(4) .rb-week > div:nth-child(3) { background: #A83838; }
-.rb-grid li:nth-child(4) .rb-week > div:nth-child(4) { background: #993333; }
-.rb-grid li:nth-child(4) .rb-week > div:nth-child(5) { background: #8A2E2E; }
-.rb-grid li:nth-child(4) .rb-week > div:nth-child(6) { background: #7A2929; }
-.rb-grid li:nth-child(4) .rb-week > div:nth-child(7) { background: #6B2424; }
-.rb-grid li:nth-child(4) .rb-week > div:nth-child(8) { background: #5C1F1F; }
+	.og-expander h3 { font-size: 32px; }
+	.og-expander p { font-size: 13px; }
+	.og-expander a { font-size: 12px; }
 
-.rb-grid li:nth-child(5) .rb-week > div:nth-child(1) { background: #e2674a; }
-.rb-grid li:nth-child(5) .rb-week > div:nth-child(2) { background: #E05C3E; }
-.rb-grid li:nth-child(5) .rb-week > div:nth-child(3) { background: #DD4D2C; }
-.rb-grid li:nth-child(5) .rb-week > div:nth-child(4) { background: #D34322; }
-.rb-grid li:nth-child(5) .rb-week > div:nth-child(5) { background: #C13D1F; }
-.rb-grid li:nth-child(5) .rb-week > div:nth-child(6) { background: #AF371D; }
-.rb-grid li:nth-child(5) .rb-week > div:nth-child(7) { background: #9E321A; }
-.rb-grid li:nth-child(5) .rb-week > div:nth-child(8) { background: #8C2C17; }
+}
 
-.rb-grid li:nth-child(6) .rb-week > div:nth-child(1) { background: #FFCC66; }
-.rb-grid li:nth-child(6) .rb-week > div:nth-child(2) { background: #FFC247; }
-.rb-grid li:nth-child(6) .rb-week > div:nth-child(3) { background: #FFBB33; }
-.rb-grid li:nth-child(6) .rb-week > div:nth-child(4) { background: #FFB41F; }
-.rb-grid li:nth-child(6) .rb-week > div:nth-child(5) { background: #FFAD0A; }
-.rb-grid li:nth-child(6) .rb-week > div:nth-child(6) { background: #F5A300; }
-.rb-grid li:nth-child(6) .rb-week > div:nth-child(7) { background: #E09600; }
-.rb-grid li:nth-child(6) .rb-week > div:nth-child(8) { background: #CC8800; }
+@media screen and (max-width: 650px) {
 
-.rb-grid li:nth-child(7) .rb-week > div:nth-child(1) { background: #99CC99; }
-.rb-grid li:nth-child(7) .rb-week > div:nth-child(2) { background: #85C185; }
-.rb-grid li:nth-child(7) .rb-week > div:nth-child(3) { background: #77BB77; }
-.rb-grid li:nth-child(7) .rb-week > div:nth-child(4) { background: #6AB46A; }
-.rb-grid li:nth-child(7) .rb-week > div:nth-child(5) { background: #5CAD5C; }
-.rb-grid li:nth-child(7) .rb-week > div:nth-child(6) { background: #52A352; }
-.rb-grid li:nth-child(7) .rb-week > div:nth-child(7) { background: #4B954B; }
-.rb-grid li:nth-child(7) .rb-week > div:nth-child(8) { background: #448844; }
-
-.rb-grid li:nth-child(8) .rb-week > div:nth-child(1) { background: #669999; }
-.rb-grid li:nth-child(8) .rb-week > div:nth-child(2) { background: #629393; }
-.rb-grid li:nth-child(8) .rb-week > div:nth-child(3) { background: #5A8787; }
-.rb-grid li:nth-child(8) .rb-week > div:nth-child(4) { background: #527A7A; }
-.rb-grid li:nth-child(8) .rb-week > div:nth-child(5) { background: #496E6E; }
-.rb-grid li:nth-child(8) .rb-week > div:nth-child(6) { background: #416262; }
-.rb-grid li:nth-child(8) .rb-week > div:nth-child(7) { background: #395656; }
-.rb-grid li:nth-child(8) .rb-week > div:nth-child(8) { background: #314949; }
-
-.rb-grid li:nth-child(9) .rb-week > div:nth-child(1) { background: #CC6699; }
-.rb-grid li:nth-child(9) .rb-week > div:nth-child(2) { background: #C7578F; }
-.rb-grid li:nth-child(9) .rb-week > div:nth-child(3) { background: #C24785; }
-.rb-grid li:nth-child(9) .rb-week > div:nth-child(4) { background: #B83D7A; }
-.rb-grid li:nth-child(9) .rb-week > div:nth-child(5) { background: #A83870; }
-.rb-grid li:nth-child(9) .rb-week > div:nth-child(6) { background: #993366; }
-.rb-grid li:nth-child(9) .rb-week > div:nth-child(7) { background: #8A2E5C; }
-.rb-grid li:nth-child(9) .rb-week > div:nth-child(8) { background: #7A2952; }
-
-.rb-grid li:nth-child(10) .rb-week > div:nth-child(1) { background: #339966; }
-.rb-grid li:nth-child(10) .rb-week > div:nth-child(2) { background: #2E8A5C; }
-.rb-grid li:nth-child(10) .rb-week > div:nth-child(3) { background: #297A52; }
-.rb-grid li:nth-child(10) .rb-week > div:nth-child(4) { background: #246B47; }
-.rb-grid li:nth-child(10) .rb-week > div:nth-child(5) { background: #1F5C3D; }
-.rb-grid li:nth-child(10) .rb-week > div:nth-child(6) { background: #194D33; }
-.rb-grid li:nth-child(10) .rb-week > div:nth-child(7) { background: #143D29; }
-.rb-grid li:nth-child(10) .rb-week > div:nth-child(8) { background: #0F2E1F; }
-
-.rb-grid li:nth-child(11) .rb-week > div:nth-child(1) { background: #666699; }
-.rb-grid li:nth-child(11) .rb-week > div:nth-child(2) { background: #626293; }
-.rb-grid li:nth-child(11) .rb-week > div:nth-child(3) { background: #5A5A87; }
-.rb-grid li:nth-child(11) .rb-week > div:nth-child(4) { background: #52527A; }
-.rb-grid li:nth-child(11) .rb-week > div:nth-child(5) { background: #49496E; }
-.rb-grid li:nth-child(11) .rb-week > div:nth-child(6) { background: #414162; }
-.rb-grid li:nth-child(11) .rb-week > div:nth-child(7) { background: #393956; }
-.rb-grid li:nth-child(11) .rb-week > div:nth-child(8) { background: #313149; }
-
-@media screen and (max-width: 63.125em) {
+	.og-fullimg { display: none; }
+	.og-details { float: none; width: 100%; }
 	
-	.rb-grid li,
-	.rb-grid li.rb-span-2,
-	.rb-grid li.rb-span-4 {
-		width: 100%;
-		height: 10em;
-		text-align: left;
-	}
-
-	.rb-grid li[class^="icon-"]:before,
-	.rb-grid li[class*=" icon-"]:before {
-		font-size: 6em;
-		left: auto;
-		right: 0;
-		line-height: 2.5;
-	}
-
-	.rb-grid li > div {
-		text-align: center;
-	}
 }
