--- a/yoga-sutras/css/default.css
+++ b/yoga-sutras/css/default.css
@@ -1,7 +1,7 @@
 /* General Demo Style */
-@import url(http://fonts.googleapis.com/css?family=Lato:100,400,700,900);
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
 
-html { height: 100%; font-size: 100%;}
+html { height: 100%; }
 
 *,
 *:after,
@@ -31,8 +31,8 @@ html { height: 100%; font-size: 100%;}
 body {
     font-family: 'Lato', Calibri, Arial, sans-serif;
     background: #f9f9f9;
-    font-weight: 400;
-    font-size: 1em;
+    font-weight: 300;
+    font-size: 15px;
     color: #333;
     overflow: scroll;
     overflow-x: hidden;
@@ -48,37 +48,42 @@ a {
 	position: relative;
 }
 
-.main,
 .container > header {
 	width: 90%;
-	max-width: 76em;
+	max-width: 1240px;
 	margin: 0 auto;
-	padding: 0 1.875em 3.125em 1.875em;
+	position: relative;
+	padding: 0 30px 50px 30px;
 }
 
 .container > header {
-	padding: 1.875em;
+	padding: 60px 30px 50px;
+	text-align: center;
 }
 
 .container > header h1 {
-	font-size: 2.125em;
-	line-height: 1.3;
-	margin: 0;
+	font-size: 34px;
+	line-height: 38px;
+	margin: 0 auto;
 	font-weight: 700;
 	color: #333;
-	float: left;
 }
 
 .container > header h1 span {
 	display: block;
-	font-size: 65%;
+	font-size: 20px;
 	font-weight: 300;
+}
+
+.main > p {
+	text-align: center;
+	padding: 50px 20px;
 }
 
 /* Header Style */
 .codrops-top {
-	line-height: 2.5;
-	font-size: 0.688em;
+	line-height: 24px;
+	font-size: 11px;
 	background: #fff;
 	background: rgba(255, 255, 255, 0.5);
 	text-transform: uppercase;
@@ -88,8 +93,8 @@ a {
 }
 
 .codrops-top a {
-	padding: 0 1em;
-	letter-spacing: 0.1em;
+	padding: 0px 10px;
+	letter-spacing: 1px;
 	color: #333;
 	display: inline-block;
 }
@@ -106,43 +111,4 @@ a {
 .codrops-top span.right a {
 	float: left;
 	display: block;
-}
-
-/* Demo Buttons Style */
-.codrops-demos {
-	float: right;
-	padding-top: 0.625em;
-}
-
-.codrops-demos a {
-    display: inline-block;
-    margin: 0.625em;
-    color: #666;
-    font-weight: 700;
-    font-size: 90%;
-    line-height: 2;
-    border-bottom: 4px solid transparent;
-}
-
-.codrops-demos a:hover {
-	color: #000;
-	border-color: #000;
-}
-
-.codrops-demos a.current-demo,
-.codrops-demos a.current-demo:hover {
-	color: #aaa;
-	border-color: #aaa;
-}
-
-.support-note {
-	clear: both;
-}
-
-.support-note span{
-	color: #ac375d;
-	display: none;
-	font-weight: bold;
-	text-align: center;
-	padding: 0.313em 0;
 }
