--- a/yoga-sutras/css/component.css
+++ b/yoga-sutras/css/component.css
@@ -97,6 +97,10 @@ html, body { height: 100%; }
 	background: #f68dbb;
 }
 
+.pt-page-7 {
+	background: #fdc162;
+}
+
 /* Triggers (menu and button) */
 
 .pt-triggers {
